# todo_app

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
src/: main.cpp
src/app/: app.cpp  app.h  app.hpp
src/commands/: command_handler.hpp
src/config/: config.cpp  config.h
src/database/: database.h  database.hpp  setup.h  sqlite_db.cpp  sqlite_db.h  sqlite_db.hpp
src/gui/: gui.cpp  gui.hpp  gui_style.cpp  gui_style.hpp  window_add_todo.cpp  window_add_todo.hpp  window_category_list.cpp  window_category_list.hpp  window_todo_list.cpp  window_todo_list.hpp
src/todo/: category.hpp  todo.h  todo.hpp  todo_controller.cpp  todo_controller.h  todo_controller.hpp
src/view/: main_frame.cpp  main_frame.h
src/view/main_menu/: main_menu.cpp  main_menu.h
src/view/panels/: tabs_panel.cpp  todo_add_panel.cpp  todo_add_panel.h  todo_edit_panel.cpp  todo_edit_panel.h  todo_list_panel.cpp  todo_list_panel.h
src/view/status_bar/: status_bar.cpp  status_bar.h
tests/: sqlite_db_test.cpp  todo_controller_test.cpp
